@@ -7,7 +7,6 @@ import static org.mockito.Mockito.when;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 import nu.ndw.nls.routingmapmatcher.domain.model.Link;
 import nu.ndw.nls.routingmapmatcher.domain.model.MapMatchingLineRequest;
 import nu.ndw.nls.routingmapmatcher.domain.model.MatchStatus;
@@ -64,8 +63,7 @@ class RoutingMapMatcherLineTest {
                 .thenReturn(lineStringMapMatcher);
         when(lineStringMapMatcher.match(lineStringLocation)).thenReturn(lineStringMatch);
         when(lineStringMatch.getStatus()).thenReturn(MatchStatus.MATCH);
-        List<LineStringMatch> results = routingMapMatcher.matchLocations(routingNetwork, mapMatchingRequest)
-                .collect(Collectors.toList());
+        List<LineStringMatch> results = routingMapMatcher.matchLocations(routingNetwork, mapMatchingRequest).toList();
         assertThat(results, hasSize(1));
     }
 }
